# cloudnest

./: .gitignore  README.md  package-lock.json  package.json  vite.config.js
docs/: APP_STORE_READINESS.md  STITCH_PROMPTS.md  UX_STANDARD.md
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/restore/: api.rs  browser.rs  checkpoint.rs  job.rs  mod.rs  models.rs
src/i18n/: en.js  index.js
