[package]
name = "icloud_recovery_desktop"
version = "0.1.6"
description = "Cute, calm macOS app for recovering deleted iCloud Drive files"
authors = ["Utkarsh Kumar"]
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "sync", "time"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
url = "2"
tempfile = "3"
futures-util = "0.3"
tokio-tungstenite = { version = "0.27", features = ["rustls-tls-native-roots"] }

[dev-dependencies]
httpmock = "0.7"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
